--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller 002 GitNc</title>
+    <link rel="stylesheet" href="./css/estilos.css">
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
+    <h1>Git</h1>
     <h2>Repositorio local a remoto</h2>
     <h3>Bienvenido!!!</h3>
 </body>
